syntax = "proto3";

package com.piggymetrics.account;

import "google/protobuf/timestamp.proto";

message UpdateStatisticsRequest {
  string Name = 1;
  Account account = 2;
}

message Account {
  string name = 1;
  google.protobuf.Timestamp lastSeen = 2;
  repeated Item incomes = 3;
  repeated Item expense = 4;
  Saving saving  = 5;
  string note = 6;
}

message Item {
  string title = 1;
  string amount = 2; // this is the type of BigDecimal
  Currency currency = 3;
  TimePeriod period = 4;
  string icon = 5;
}

enum Currency {
  USD = 0;
  EUR = 1;
  RUB = 2;
}

enum TimePeriod {
  YEAR = 0;
  QUARTER = 1;
  MONTH = 2;
  DAY = 3;
  HOUR = 4;
}

message Saving {
  string amount = 1; // this is the type of BigDecimal
  Currency currency = 2;
  string interest = 3; // this is the type of BigDecimal
  bool deposit = 4;
  bool capitalization = 5;
}

message UpdateStatisticsResponse {
  DataPoint updatedAccount = 1;
}

message DataPoint {
  DataPointId id = 1;
  repeated ItemMetric incomes = 2;
  repeated ItemMetric expenses = 3;

  message StatisticEntry {
    StatisticMetric key = 1;
    string value = 2;  // use string to express BigDecimal
  }
  repeated StatisticEntry statistics = 4;

  message RateEntry {
    Currency key = 1;
    string value = 2;  // use string to express BigDecimal
  }
  repeated RateEntry rates = 5;
}

message DataPointId {
  string account = 1;
  google.protobuf.Timestamp date = 2;
}

message ItemMetric {
  string name = 1;
  string amount = 2;  // use string to express BigDecimal
}

enum StatisticMetric {
  INCOME = 0;
  EXPENSE = 1;
  SAVING = 2;
}

service StatisticsGrpcService {
  rpc UpdateStatistics (UpdateStatisticsRequest) returns (UpdateStatisticsResponse);
}
